--- a/.github/workflows/ci-grumphp.yml
+++ b/.github/workflows/ci-grumphp.yml
@@ -53,6 +53,7 @@ jobs:
 
   drupal_test:
     runs-on: ubuntu-latest
+    needs: [drupal_codequality]
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
