add container: node:lts for frontend code quality job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,7 @@ jobs:
 
   frontend_codequality:
     runs-on: ubuntu-latest
+    container: node:lts
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
