--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,3 +89,63 @@ jobs:
         run: |
           ddev phpunit --testsuite unit
           ddev phpunit --bootstrap=./vendor/weitzman/drupal-test-traits/src/bootstrap-fast.php --configuration ./phpunit.xml --testsuite existing-site
+
+  frontend_vr:
+    permissions:
+      packages: read
+      contents: read
+    needs: [frontend_codequality]
+    runs-on: ubuntu-latest
+    continue-on-error: true
+    container: skippednote/drupal-cypress:1.0.6
+    env:
+      # For Cypress.
+      CYPRESS_ADMIN_USERNAME: ct-admin
+      CYPRESS_ADMIN_PASSWORD: ct-admin
+    services:
+      mariadb:
+        image: ghcr.io/contrib-tracker/backend-db:main
+        env:
+          ALLOW_EMPTY_PASSWORD: "yes"
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+
+      - name: Get Cache Directories
+        id: cache-dir
+        run: |
+          echo "::set-output name=composer-dir::$(composer config cache-files-dir)"
+          echo "::set-output name=npm-dir::$(npm config get cache)"
+      - uses: actions/cache@v4
+        with:
+          path: ${{ steps.cache-dir.outputs.composer-dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-composer-
+      - uses: actions/cache@v4
+        with:
+          path: ${{ steps.cache-dir.outputs.npm-dir }}
+          key: ${{ runner.os }}-node-${{ hashFiles('web/themes/custom/contribtracker/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Test
+        run: |
+          ./.github/ci.sh
+          composer install -o --no-progress
+          ./vendor/bin/drush deploy -y
+          ./vendor/bin/drush upwd ct-admin "ct-admin"
+          cd web/themes/custom/contribtracker
+          npm ci --cache $CI_PROJECT_DIR/.npm --prefer-offline
+          npm run build
+          npm run vr
+
+      - name: Archive Cypress recordings
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: cypress-recordings
+          path: |
+            web/themes/custom/contribtracker/cypress/screenshots
+            web/themes/custom/contribtracker/cypress/videos
+          retention-days: 3
