--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,6 +115,8 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2'
+        env:
+          runner: self-hosted
 
       - name: Get Cache Directories
         id: cache-dir
