--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,12 +111,12 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v4
 
-      - name: Setup PHP 8.2
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.2'
-        env:
-          runner: self-hosted
+      # - name: Setup PHP 8.2
+      #   uses: shivammathur/setup-php@v2
+      #   with:
+      #     php-version: '8.2'
+      #   env:
+      #     runner: self-hosted
 
       - name: Get Cache Directories
         id: cache-dir
