--- a/web/themes/custom/contribtracker/tsconfig.json
+++ b/web/themes/custom/contribtracker/tsconfig.json
@@ -7,7 +7,8 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "commonjs"
+    "module": "ESNext",
+    "moduleResolution":"node"
   },
   "include": ["ts/*.ts"]
 }
