--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,23 +15,16 @@ concurrency:
 jobs:
   drupal_codequality:
     runs-on: ubuntu-latest
+    container: hussainweb/drupalqa
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
 
-      - name: Drupal Code Quality
-        uses: hussainweb/drupalqa-action@v2
-        id: drupalqa
-        with:
-          php-version: 8.2
-          checks: |
-            phplint: {}
-            phpcs:
-              standard: phpcs.xml
-              ignore: /node_modules/
-            phpmd:
-              ruleset: phpmd.xml
-              suffixes: php
+      # Run using testsuites
+      - name: Run linters
+        run: grumphp run --testsuite=linters
+      - name: Run code quality check
+        run: grumphp run --testsuite=code_quality
 
 
   frontend_codequality:
