add phpstan check

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,6 +89,9 @@ jobs:
           npm ci
           gulp
 
+      - name: Run phpstan
+        run: ddev php ./vendor/bin/grumphp run --tasks=phpstan
+
       - name: Test
         run: |
           ddev phpunit --testsuite unit
