--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,9 @@ jobs:
         run: echo "npm-dir=$(npm config get cache)" >> $GITHUB_OUTPUT
       - uses: actions/cache@v4
         with:
-          path: ${{ steps.cache-dir.outputs.npm-dir }}
+          path: |
+            **/node_modules
+            ${{ steps.cache-dir.outputs.npm-dir }}
           key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-npm-
@@ -69,7 +71,9 @@ jobs:
             ${{ runner.os }}-composer-
       - uses: actions/cache@v4
         with:
-          path: ${{ steps.cache-dir.outputs.npm-dir }}
+          path: |
+            **/node_modules
+            ${{ steps.cache-dir.outputs.npm-dir }}
           key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-npm-
@@ -141,7 +145,9 @@ jobs:
             ${{ runner.os }}-composer-
       - uses: actions/cache@v4
         with:
-          path: ${{ steps.cache-dir.outputs.npm-dir }}
+          path: |
+            **/node_modules
+            ${{ steps.cache-dir.outputs.npm-dir }}
           key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-npm-
