try without user and HOME changes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,7 +99,7 @@ jobs:
       - name: Cypress Test
         run: ddev cypress-run-ci
 
-      - name: Archive Cypress recordings
+      - name: Save Cypress recordings
         if: always()
         uses: actions/upload-artifact@v4
         with:
