--- a/grumphp.yml
+++ b/grumphp.yml
@@ -37,10 +37,10 @@ grumphp:
         - .github
         - .gitlab
         - .ddev
-        - /config/
-        - /drush/
+        - /config
+        - /drush
         - /web/robots.txt
-        - /web/sites/default/
+        - /web/sites/default
         - bower_components
         - node_modules
         - /vendor
@@ -66,15 +66,15 @@ grumphp:
         - module
         - theme
     phpstan:
-      configuration: phpstan.neon.dist
+      configuration: phpstan.neon
       ignore_patterns:
         - .github
         - .gitlab
         - .ddev
-        - /config/
-        - /drush/
+        - /config
+        - /drush
         - /web/robots.txt
-        - /web/sites/default/
+        - /web/sites/default
         - bower_components
         - node_modules
         - /vendor
