--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,7 +97,7 @@ jobs:
           ddev phpunit --bootstrap=./vendor/weitzman/drupal-test-traits/src/bootstrap-fast.php --configuration ./phpunit.xml --testsuite existing-site
 
       - name: Cypress Test
-        run: ddev cypress-run-ci
+        run: ddev cypress-run
 
       - name: Save Cypress recordings
         if: always()
