ci: include packages in dependabot group
[skip ci]

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -34,6 +34,7 @@ updates:
         patterns:
           - "eslint*"
           - "stylelint*"
+          - "@typescript-eslint/*"
       percy:
         patterns:
           - "@percy/*"
