--- a/web/themes/custom/contribtracker/package.json
+++ b/web/themes/custom/contribtracker/package.json
@@ -37,10 +37,9 @@
     "prettier": "^2.7.1",
     "sass": "^1.77.0",
     "sass-toolkit": "^2.10.2",
-    "stylelint": "^13.13.1",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-prettier": "^1.2.0",
-    "stylelint-scss": "^3.21.0",
+    "stylelint": "^15.11.0",
+    "stylelint-prettier": "^3.0.0",
+    "stylelint-scss": "5.0",
     "typescript": "^4.8.4",
     "uuid": "^9.0.1"
   },
