percy test in CI

--- a/.ddev/addon-metadata/ddev-cypress/manifest.yaml
+++ b/.ddev/addon-metadata/ddev-cypress/manifest.yaml
@@ -6,5 +6,6 @@ project_files:
     - docker-compose.cypress.yaml
     - commands/cypress/cypress-open
     - commands/cypress/cypress-run
+    - commands/cypress/percy-run
 global_files: []
 removal_actions: []
