--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,6 +106,9 @@ jobs:
       - name: Cypress Test
         run: ddev cypress-run
 
+      - name: Percy Run
+        run: ddev percy-run
+
       - name: Save Cypress recordings
         if: always()
         uses: actions/upload-artifact@v4
