Identify Branch name, Commit Hash and PR No for Percy

--- a/.ddev/docker-compose.cypress.yaml
+++ b/.ddev/docker-compose.cypress.yaml
@@ -16,6 +16,7 @@ services:
       - PERCY_TOKEN
       - PERCY_COMMIT
       - PERCY_BRANCH
+      - PERCY_PULL_REQUEST
 
     volumes:
       # Mount the project root to Cypress's project point
