--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,6 +117,8 @@ jobs:
           retention-days: 3
 
   deploy:
+    environment:
+      name: ${{ github.ref_name == 'main' && 'production' || 'feature' }}
     needs:
       - drupal_codequality
       - drupal_test
