ci: remove duplicate npm

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Frontend Code Quality
         run: |
           cd web/themes/custom/contribtracker
-          npm npm install --prefer-offline
+          npm install --prefer-offline
           npm run lint
 
 
