--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,9 @@ jobs:
         run: echo "npm-dir=$(npm config get cache)" >> $GITHUB_OUTPUT
       - uses: actions/cache@v4
         with:
-          path: ${{ steps.cache-dir.outputs.npm-dir }}
+          path: |
+            **/node_modules
+            ${{ steps.cache-dir.outputs.npm-dir }}
           key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-npm-
@@ -86,7 +88,9 @@ jobs:
             ${{ runner.os }}-composer-
       - uses: actions/cache@v4
         with:
-          path: ${{ steps.cache-dir.outputs.npm-dir }}
+          path: |
+            **/node_modules
+            ${{ steps.cache-dir.outputs.npm-dir }}
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
