CONTRIB-003: Update the dependencies and configurations to fix the stylelint warnings.

--- a/web/themes/custom/contribtracker/.stylelintrc.json
+++ b/web/themes/custom/contribtracker/.stylelintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": ["stylelint-prettier/recommended"],
   "plugins": ["stylelint-scss", "stylelint-prettier"],
+  "customSyntax": "postcss-scss",
   "rules": {
     "prettier/prettier": true,
     "at-rule-no-unknown": null,
