--- a/web/themes/custom/contribtracker/package.json
+++ b/web/themes/custom/contribtracker/package.json
@@ -34,6 +34,7 @@
     "gulp-svgstore": "^9.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
     "postcss": "^8.4.38",
+    "postcss-scss": "^4.0.9",
     "prettier": "^3.2.5",
     "sass": "^1.77.0",
     "sass-toolkit": "^2.10.2",
